syntax = "proto3";
package abci;

import "google/api/annotations.proto";

message EmptyMessage {}

message CheckTxRequest { bytes tx = 1; }

message DeliverTxRequest { bytes tx = 1; }

message BlockMessage { uint64 height = 1; }


service Abci {
  rpc InitChain(EmptyMessage) returns (EmptyMessage) {
    option (google.api.http) = {
      get : "/abci/v1/InitChain"
    };
  }

  rpc CheckTx(CheckTxRequest) returns (EmptyMessage) {
    option (google.api.http) = {
      post : "/abci/v1/CheckTx"
      body : "*"
    };
  }

  rpc DeliverTx(DeliverTxRequest) returns (EmptyMessage) {
    option (google.api.http) = {
      post : "/abci/v1/DeliverTx"
      body : "*"
    };
  }

  rpc OnInitialize(BlockMessage) returns (EmptyMessage) {
    option (google.api.http) = {
      post : "/abci/v1/OnInitialize"
      body : "*"
    };
  }

  rpc OnFinilize(BlockMessage) returns (EmptyMessage) {
    option (google.api.http) = {
      post : "/abci/v1/OnFinilize"
      body : "*"
    };
  }

  rpc Commit(BlockMessage) returns (EmptyMessage) {
    option (google.api.http) = {
      post : "/abci/v1/Commit"
      body : "*"
    };
  }
}
